--- a/Prediction_of_Product_Sales.ipynb
+++ b/Prediction_of_Product_Sales.ipynb
@@ -163,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KW_uP8bxk3QH",
-        "outputId": "a6cba534-b3d6-4cd6-f296-4de095619382"
+        "outputId": "a4913947-b1dd-4c34-f52f-6900f20b1854"
       },
       "execution_count": 3,
       "outputs": [
@@ -216,7 +216,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j60snx80dwu_",
-        "outputId": "4997102d-75c5-4e3f-bb93-fea76520cd73"
+        "outputId": "e7a4a964-24ba-4244-c72c-cad7a4673db8"
       },
       "outputs": [
         {
@@ -260,7 +260,7 @@
           "height": 357
         },
         "id": "3kVymaMIqgxo",
-        "outputId": "8b1dbeaa-4d39-432c-9a35-56575e947da0"
+        "outputId": "da333106-c395-4ed1-a2ee-4b8572173725"
       },
       "execution_count": 7,
       "outputs": [
@@ -299,7 +299,7 @@
             "text/html": [
               "\n",
               "\n",
-              "  <div id=\"df-9041133c-29a8-49aa-9597-228f3f653b88\">\n",
+              "  <div id=\"df-41dff3ea-7447-4c40-abba-1a5f4986f4a7\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -412,7 +412,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9041133c-29a8-49aa-9597-228f3f653b88')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-41dff3ea-7447-4c40-abba-1a5f4986f4a7')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -425,8 +425,8 @@
               "\n",
               "\n",
               "\n",
-              "    <div id=\"df-7bbd5c24-4f06-4a0c-bc19-67a5a1229e34\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7bbd5c24-4f06-4a0c-bc19-67a5a1229e34')\"\n",
+              "    <div id=\"df-f08e962a-9baf-4985-984b-cc33f43d88b5\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f08e962a-9baf-4985-984b-cc33f43d88b5')\"\n",
               "              title=\"Suggest charts.\"\n",
               "              style=\"display:none;\">\n",
               "\n",
@@ -483,7 +483,7 @@
               "\n",
               "function displayQuickchartButton(domScope) {\n",
               "  let quickchartButtonEl =\n",
-              "    domScope.querySelector('#df-7bbd5c24-4f06-4a0c-bc19-67a5a1229e34 button.colab-df-quickchart');\n",
+              "    domScope.querySelector('#df-f08e962a-9baf-4985-984b-cc33f43d88b5 button.colab-df-quickchart');\n",
               "  quickchartButtonEl.style.display =\n",
               "    google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "}\n",
@@ -530,12 +530,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-9041133c-29a8-49aa-9597-228f3f653b88 button.colab-df-convert');\n",
+              "          document.querySelector('#df-41dff3ea-7447-4c40-abba-1a5f4986f4a7 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-9041133c-29a8-49aa-9597-228f3f653b88');\n",
+              "          const element = document.querySelector('#df-41dff3ea-7447-4c40-abba-1a5f4986f4a7');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -587,7 +587,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mGlTH6_Ud0OP",
-        "outputId": "fc508781-a4a8-47f0-f8fb-5188afaaf1f5"
+        "outputId": "1ab58b8a-904a-4e5f-d2c7-44af9c53206b"
       },
       "outputs": [
         {
@@ -631,7 +631,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "X_agNO1irs8Y",
-        "outputId": "f0458cce-7c03-43cc-ed8a-143b9e5f528e"
+        "outputId": "f0a343d9-1dcf-4939-bfce-ad593d44ec8a"
       },
       "outputs": [
         {
@@ -689,7 +689,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gzThOVusruEl",
-        "outputId": "d4aaf03a-0b88-427d-9d83-a369eed0f4f3"
+        "outputId": "74d14aeb-40d6-4d4c-8873-30d6fba355ef"
       },
       "outputs": [
         {
@@ -735,7 +735,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hXx5nlC2LpNZ",
-        "outputId": "732a74a3-a4db-45b1-804f-d1e88f13b2e0"
+        "outputId": "2b77c03e-a59d-409e-d96d-a6cb4bfda986"
       },
       "outputs": [
         {
@@ -780,7 +780,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nQFntm-ouZKU",
-        "outputId": "8bf6c98b-cc61-48fa-afea-050952944549"
+        "outputId": "92dd5e8d-3689-48a0-b4c2-aafcf2b42216"
       },
       "outputs": [
         {
@@ -827,7 +827,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fcKL6aJLuvnb",
-        "outputId": "24715b93-8aaa-48da-bbfe-0512d6191957"
+        "outputId": "73940354-bfa6-48e5-d55a-ef6f29d3f9d1"
       },
       "outputs": [
         {
@@ -901,7 +901,7 @@
         "id": "bwytPxQZd1u_",
         "outputId": "0f7d3089-9ec6-4e23-c964-e61711479eac"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -917,11 +917,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 15,
       "metadata": {
-        "id": "H6S98_usAGod"
+        "id": "H6S98_usAGod",
+        "outputId": "56702429-d66d-4e4f-cef9-9574aba94f98",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index(['Item_Identifier', 'Item_Fat_Content', 'Item_Type', 'Outlet_Identifier',\n",
+            "       'Outlet_Size', 'Outlet_Location_Type', 'Outlet_Type'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ],
       "source": [
         "# Finding MISSING columns using select_dtypes\n",
         "obj_columns = df_sales_prediction.select_dtypes('object').columns"
@@ -935,7 +949,7 @@
       "metadata": {
         "id": "hM8zhQ-PrOCA"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -947,12 +961,12 @@
       "metadata": {
         "id": "JUJwCPrztQ-P"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "lVbUcTBlxJfS"
       },
@@ -964,7 +978,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1021,7 +1035,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1089,7 +1103,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1119,7 +1133,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1331,7 +1345,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "id": "qiijNqcMnXiL"
       },
@@ -1355,7 +1369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1401,7 +1415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1696,7 +1710,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -1987,7 +2001,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2038,7 +2052,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2088,7 +2102,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2141,7 +2155,7 @@
       "metadata": {
         "id": "fZQ6ao93todW"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2157,7 +2171,7 @@
           "height": 507
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2194,7 +2208,7 @@
           "height": 507
         }
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2255,7 +2269,7 @@
       "metadata": {
         "id": "Okf6NfNx3Ske"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2270,7 +2284,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2300,7 +2314,7 @@
           "height": 860
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2365,7 +2379,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2395,7 +2409,7 @@
           "height": 586
         }
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2444,7 +2458,7 @@
           "height": 693
         }
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2501,7 +2515,7 @@
           "height": 1000
         }
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
