--- a/Prediction_of_Product_Sales.ipynb
+++ b/Prediction_of_Product_Sales.ipynb
@@ -3295,12 +3295,12 @@
         "plot_categorical_vs_target(df_sales_prediction, feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "LZp5IAAtYe0J",
-        "outputId": "6ec32f71-485b-4e1f-ebbe-606e860951ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "LZp5IAAtYe0J",
+        "outputId": "6ec32f71-485b-4e1f-ebbe-606e860951ae"
       },
       "execution_count": 56,
       "outputs": [
@@ -3483,12 +3483,12 @@
         "plot_categorical_vs_target(df_sales_prediction, feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "SiaQkJjTY08t",
-        "outputId": "fd58c27d-d6de-49c7-be05-9ce839989c83",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "SiaQkJjTY08t",
+        "outputId": "fd58c27d-d6de-49c7-be05-9ce839989c83"
       },
       "execution_count": 59,
       "outputs": [
@@ -3671,12 +3671,12 @@
         "plot_categorical_vs_target(df_sales_prediction, feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "8M56cXqvZA9b",
-        "outputId": "fb0a93bb-f8b8-42a7-e661-07403c1fc687",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "8M56cXqvZA9b",
+        "outputId": "fb0a93bb-f8b8-42a7-e661-07403c1fc687"
       },
       "execution_count": 62,
       "outputs": [
@@ -3859,12 +3859,12 @@
         "plot_categorical_vs_target(df_sales_prediction, feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "s-1QsH3KZfRv",
-        "outputId": "7a3b4e20-0012-4a0b-f162-4024732fbfdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "s-1QsH3KZfRv",
+        "outputId": "7a3b4e20-0012-4a0b-f162-4024732fbfdd"
       },
       "execution_count": 65,
       "outputs": [
@@ -4047,12 +4047,12 @@
         "plot_categorical_vs_target(df_sales_prediction, feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "rA_sYuYtZsT9",
-        "outputId": "e61c5841-b4c2-4d5a-eccd-a15319d8fc97",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 407
-        }
+        },
+        "id": "rA_sYuYtZsT9",
+        "outputId": "e61c5841-b4c2-4d5a-eccd-a15319d8fc97"
       },
       "execution_count": 68,
       "outputs": [
@@ -4234,12 +4234,12 @@
         "plot_numeric_vs_target(df_sales_prediction,feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "0ZnktZ7aZ7fj",
-        "outputId": "c23d6021-af23-4ec1-fc22-2be664c3c45c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 444
-        }
+        },
+        "id": "0ZnktZ7aZ7fj",
+        "outputId": "c23d6021-af23-4ec1-fc22-2be664c3c45c"
       },
       "execution_count": 74,
       "outputs": [
@@ -4420,12 +4420,12 @@
         "plot_numeric_vs_target(df_sales_prediction,feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "NrkNJPxybFrR",
-        "outputId": "aa724c71-938b-43f6-ad09-c3b757c25fd6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 444
-        }
+        },
+        "id": "NrkNJPxybFrR",
+        "outputId": "aa724c71-938b-43f6-ad09-c3b757c25fd6"
       },
       "execution_count": 77,
       "outputs": [
@@ -4607,12 +4607,12 @@
         "plot_numeric_vs_target(df_sales_prediction,feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "KKWxu2iJbmSa",
-        "outputId": "213f340b-a1e9-42b9-ac24-965b6d4969c7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 443
-        }
+        },
+        "id": "KKWxu2iJbmSa",
+        "outputId": "213f340b-a1e9-42b9-ac24-965b6d4969c7"
       },
       "execution_count": 80,
       "outputs": [
@@ -4794,12 +4794,12 @@
         "plot_numeric_vs_target(df_sales_prediction,feature, 'Item_Outlet_Sales');"
       ],
       "metadata": {
-        "id": "A_JdWP3jcLoS",
-        "outputId": "8550a5d1-763a-48b7-9163-23e2d09bde51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 444
-        }
+        },
+        "id": "A_JdWP3jcLoS",
+        "outputId": "8550a5d1-763a-48b7-9163-23e2d09bde51"
       },
       "execution_count": 83,
       "outputs": [
@@ -4938,7 +4938,7 @@
       "cell_type": "markdown",
       "source": [
         "* Is the feature constant or quasi-constant?\n",
-        "  * Ans: No"
+        "  * Ans: Not a feature!"
       ],
       "metadata": {
         "id": "LEYmvcNNPUUC"
@@ -4958,7 +4958,7 @@
       "cell_type": "markdown",
       "source": [
         "* Would we know this feature before the target is determined?\n",
-        "     * ans: Yes"
+        "     * ans: Yes, since it is our target!"
       ],
       "metadata": {
         "id": "hl6X-322PUUC"
@@ -4968,7 +4968,7 @@
       "cell_type": "markdown",
       "source": [
         "* Is there a business case/understanding reason to exclude based on our business case?\n",
-        "    * Ans: No"
+        "    * Ans: Yes, since it is our target!"
       ],
       "metadata": {
         "id": "qn9F9NfFPUUC"
